# devtools

./: .gitignore  LICENSE  README.md  deauth_tool.py  pyproject.toml
src/devtools/: drawLine.py  networkCommands.py  ouiLookup.py  rootCheck.py  shellCommand.py  wifiSelector.py
tests/: deauth_tool.py
